bhirthday cal aproximately Done in console

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>birthaday Calculater</title>
 </head>
 <body>
+    <form id="form">
+        <input type="date" id="userInput">
+    </form>
+   
     
     <script src="./main.js"></script>
 </body>
