user to console

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <form id="form">
         <input type="date" id="userInput">
+        <button type="submit">Submit</button>
     </form>
    
     
