--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>birthaday Calculater</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-    <form id="form">
-        <input type="date" id="userInput">
-        <button type="submit">Submit</button>
-    </form>
+    <div class="max-w-md mx-auto p-6 bg-white rounded-lg shadow-md">
+        <h1 class="text-2xl font-semibold mb-4">Birthday Calculator</h1>
+        <form id="form" class="mb-4">
+            <input type="date" id="userInput" class="border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-400">
+            <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded-md ml-2 focus:outline-none focus:ring-2 focus:ring-blue-400">Submit</button>
+        </form>
+        <div id="countdown" >
+            <!-- <p id="countdown-text" class="text-lg font-semibold"></p> -->
+        </div>
+    </div>
    
     
     <script src="./main.js"></script>
